@@ -395,7 +395,10 @@ void evdns_cancel_request(struct evdns_base *base, struct evdns_request *req);
 
   The currently available configuration options are:
 
-    ndots, timeout, max-timeouts, max-inflight, attempts, randomize-case.
+    ndots, timeout, max-timeouts, max-inflight, attempts, randomize-case,
+    bind-to.
+
+  The option name needs to end with a colon.
 
   @param base the evdns_base to which to apply this operation
   @param option the name of the configuration option to be modified
